# clickhouse-on-aws-lambda

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
cmake/find/: cyrus-sasl.cmake  krb5.cmake  lambda.cmake  s3.cmake
contrib/: CMakeLists.txt
contrib/aws-lambda-cpp-cmake/: CMakeLists.txt
contrib/aws-s3-cmake/: CMakeLists.txt
lambda/: Dockerfile  build.sh  entrypoint.sh  run-local.sh  smoke-tests.sh  update.sh
lambda-tests/: 0002.json  0002.reference  0003.json  0003.reference  0004.json  0004.reference  0005.json  0005.reference  0100.json  0100.reference  0200.json  0201.json  0202.json  0202_10mb_chunks.json  0202_200mb_chunks.json  0203.json  0300.json  0301.json  0302_10mb_chunks.json  0302_10mb_chunks_incomplete.json  0302_200mb_chunks.json  _0300.json
programs/: CMakeLists.txt  config_tools.h.in  main.cpp
programs/lambda-server/: CMakeLists.txt  LambdaServer.cpp  Runtime.cpp  Runtime.h  clickhouse-lambda-server.cpp
src/: CMakeLists.txt
src/Client/: LambdaConnections.cpp  LambdaConnections.h
src/Common/: setThreadName.cpp
src/Core/: Settings.h
src/DataStreams/: RemoteQueryExecutor.cpp  RemoteQueryExecutor.h
src/IO/: ReadBufferFromS3.cpp
src/Interpreters/: Context.cpp  Context.h
src/Storages/: StorageS3.cpp  StorageS3.h  StorageS3Lambda.cpp  StorageS3Lambda.h
src/TableFunctions/: TableFunctionS3Lambda.cpp  TableFunctionS3Lambda.h  registerTableFunctions.cpp  registerTableFunctions.h
